--- a/www/css/myapp.css
+++ b/www/css/myapp.css
@@ -21,8 +21,7 @@
 /* line 12, ../sass/_main.scss */
 .app .chessboard table td {
   border: 2px solid black;
-}
-tr {
-	table-layout: fixed;
-	width: 10px;
+  width: 50px;
+  height: 50px;
+  vertical-align: middle;
 }
